# thesaurus_qt

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/db/: abstract_repository.h  db_instance.cpp  db_instance.h
src/model/: article.h  entry_repository.cpp  entry_repository.h  lit_entries_repository.cpp  lit_entries_repository.h  lit_entry.cpp  lit_entry.h
src/ui/: entry_view_model.cpp  entry_view_model.h  main_window.cpp  main_window.h  main_window.ui
